--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>Hello, my name is Raul Gonzalez, and this page is part of a web design class that I teach at Blinn College. This semester, inspired by a student, I combined my passion for wood work and passtion for web design.</p>
+    <p>This page is an ongoing project, which will be completed by the end of the semester in December. However, I'm thinking that by the end of the semester, I may keep the page and tailor it to the little library's needs.</p>
+    <p>Eventually, the students and I will be building a web form, add a gallery page and add links between pages.</p>
+
+    <p>In the meantime, feel free to contact me at raul.gonzalez@blinn.edu for any comments, feedback, or just about anything :).</p>
+  </body>
 </html>
