--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>This page is an ongoing project, which will be completed by the end of the semester in December. However, I'm thinking that by the end of the semester, I may keep the page and tailor it to the little library's needs.</p>
     <p>Eventually, the students and I will be building a web form, add a gallery page and add links between pages.</p>
 
-    <p>In the meantime, feel free to contact me at raul.gonzalez@blinn.edu for any comments, feedback, or just about anything :).</p>
+    <p>In the meantime, you can contact me at speedygonzales77@gmail.com for any comments, feedback, or just about anything :).</p>
+
+    <p>During the development of this project, feel free to load the library with books you've previously enjoyed.</p>
   </body>
 </html>
