--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <p>In the meantime, you can contact me at speedygonzales77@gmail.com for any comments, feedback, or just about anything :).</p>
 
     <p>During the development of this project, feel free to load the library with books you've previously enjoyed.</p>
+
+    <p>If you are a business, let me know and I'll mention it on this page...</p>
   </body>
 </html>
