--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <p>During the development of this project, feel free to load the library with books you've previously enjoyed.</p>
 
     <p>If you are a business, let me know and I'll mention it on this page...</p>
+    <p>If you are a local author, let me know if I can help by promoting your work here.</p>
   </body>
 </html>
