--- a/index.html
+++ b/index.html
@@ -5,16 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <p>Hello, my name is Raul Gonzalez, and this page is part of a web design class that I teach at Blinn College. This semester, inspired by a student, I combined my passion for wood work and passtion for web design.</p>
-    <p>This page is an ongoing project, which will be completed by the end of the semester in December. However, I'm thinking that by the end of the semester, I may keep the page and tailor it to the little library's needs.</p>
-    <p>Eventually, the students and I will be building a web form, add a gallery page and add links between pages.</p>
-
-    <p>In the meantime, you can contact me at speedygonzales77@gmail.com for any comments, feedback, or just about anything :).</p>
-
-    <p>During the development of this project, feel free to load the library with books you've previously enjoyed.</p>
-
-    <p>If you are a business, let me know and I'll mention it on this page...</p>
-    <p>If you are a local author, let me know if I can help by promoting your work here.</p>
-  </body>
+  <body></body>
 </html>
