--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </div>
         </div>
       </div>
-      <!-- End First Paragraph - updated -->
+      <!-- End First Paragraph -->
 
       <!-- Begin Headshot -->
       <div class="container text-center headshots">
