--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/carousel/carousel-1.jpg" class="d-block w-100" alt="..." />
+            <img src="images/carousel/carousel-1.jpg" class="d-block w-100" alt="Person reading a book" />
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
@@ -54,7 +54,7 @@
           </div>-->
 
           <div class="carousel-item">
-            <img src="images/carousel/carousel-2.jpg" class="d-block w-100" alt="..." />
+            <img src="images/carousel/carousel-2.jpg" class="d-block w-100" alt="Book shelf" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
