--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             </div>
           </div>
 
-          <!-- video goes here -->
+          <!-- video goes here 
           <div class="carousel-item">
             <div class="ratio ratio-16x9">
               <video autoplay loop muted>
                 <source src="https://videos.pexels.com/video-files/3941289/3941289-hd_1920_1080_30fps.mp4" type="video/mp4" />
               </video>
             </div>
-          </div>
+          </div>-->
 
           <div class="carousel-item">
             <img src="images/carousel/carousel-2.jpg" class="d-block w-100" alt="Book shelf" />
