--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
       <div class="container-fluid text-center blinn-fa-container">
         <div class="row">
           <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-book blinn-fa-icon"></i><br /><a href="#">Hours</a></div>
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-book-open-reader blinn-fa-icon"></i><br /><a href="#">Tickets</a></div>
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-person-bookmark blinn-fa-icon"></i><br /><a href="#">Clothing</a></div>
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-book-open blinn-fa-icon"></i><br /><a href="#">Photos</a></div>
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-contatc-us blinn-fa-icon"></i><br /><a href="#">Volunteers</a></div>
+          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-person-shelter blinn-fa-icon"></i><br /><a href="#">Tickets</a></div>
+          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-bookmark blinn-fa-icon"></i><br /><a href="#">Clothing</a></div>
+          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-pencil blinn-fa-icon"></i><br /><a href="#">Photos</a></div>
+          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-users blinn-fa-icon"></i><br /><a href="#">Volunteers</a></div>
           <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-handshake blinn-fa-icon"></i><br /><a href="#">Pricing</a></div>
         </div>
       </div>
