--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <!-- video goes here -->
           <div class="carousel-item">
             <div class="ratio ratio-16x9">
-              <video autoplay loop muted>
+              <video autoplay loop muted id="my-vid">
                 <source src="https://videos.pexels.com/video-files/855418/855418-hd_1920_1080_25fps.mp4" type="video/mp4" />
               </video>
             </div>
@@ -140,6 +140,9 @@
     <footer-component></footer-component>
     <!-- end footer -->
     <section>
+      <!-- jQuery CDN JS -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
       <!-- Bootstrap CDN JS -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
@@ -148,6 +151,9 @@
 
       <!-- Local JS File with Footer -->
       <script src="components/js/footer.js"></script>
+
+      <!-- Local JS File -->
+      <script src="js/scripts.js"></script>
     </section>
   </body>
 </html>
