--- a/form.htm
+++ b/form.htm
@@ -29,7 +29,7 @@
       <!-- radio buttons -->
       <strong>Yes or No?</strong><br />
       <input type="radio" name="myDecision" id="myRadio" value="Yes" required />Yes<br />
-      <input type="radio" name="myDecision-1" id="myRadio" value="No" />No
+      <input type="radio" name="myDecision" id="myRadio" value="No" />No
       <br />
 
       <input type="submit" value="Submit Form" id="submit" />
