--- a/form.htm
+++ b/form.htm
@@ -32,6 +32,12 @@
       <input type="radio" name="myDecision" id="myRadio" value="No" />No
       <br />
 
+      <!-- checkbox -->
+      <stong>Pick all that apply</stong><br />
+      <input type="checkbox" name="myDecisionCheckbox" id="myCheckbox-yes" value="Yes" required /><label for="myCheckbox-yes"> Yes</label><br />
+      <input type="checkbox" name="myDecisionCheckbox" id="myCheckbox-no" value="No" /><label for="myCheckbox-no"> No </label>
+      <br />
+
       <input type="submit" value="Submit Form" id="submit" />
     </form>
 
