--- a/form.htm
+++ b/form.htm
@@ -28,8 +28,8 @@
 
       <!-- radio buttons -->
       <strong>Yes or No?</strong><br />
-      <input type="radio" name="myDecision" id="myRadio" value="Yes" required />Yes<br />
-      <input type="radio" name="myDecision" id="myRadio" value="No" />No
+      <input type="radio" name="myDecision" id="myRadio-yes" value="Yes" required /><label for="myRadio-yes"> Yes </label><br />
+      <input type="radio" name="myDecision" id="myRadio-no" value="No" /><label for="myRadio-no"> No </label>
       <br />
 
       <!-- checkbox -->
