--- a/form.htm
+++ b/form.htm
@@ -34,9 +34,15 @@
 
       <!-- checkbox -->
       <stong>Pick all that apply</stong><br />
-      <input type="checkbox" name="myDecisionCheckbox" id="myCheckbox-yes" value="Yes" required /><label for="myCheckbox-yes"> Yes</label><br />
+      <input type="checkbox" name="myDecisionCheckbox" id="myCheckbox-yes" value="Yes" /><label for="myCheckbox-yes"> Yes</label><br />
       <input type="checkbox" name="myDecisionCheckbox" id="myCheckbox-no" value="No" /><label for="myCheckbox-no"> No </label>
       <br />
+
+      <!-- textarea -->
+      <textarea name="comments" value="comments" style="width: 800px; height: 500px"></textarea>
+
+      <!-- uplodad filed-->
+      <input type="file" name="upload" id="upload" accept=".pdf, .docx" />
 
       <input type="submit" value="Submit Form" id="submit" />
     </form>
