--- a/schedule.html
+++ b/schedule.html
@@ -7,12 +7,20 @@
   </head>
   <body>
     <!-- unordered list -->
-    <ul>
+    <ul type="disc">
       <li>Item 1</li>
       <li>Item 2</li>
       <li>Item 3</li>
       <li>Item 4</li>
     </ul>
+
+    <!-- oredered list -->
+    <ol>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+    </ol>
 
     <table class="table" border="1">
       <thead>
