--- a/schedule.html
+++ b/schedule.html
@@ -15,7 +15,7 @@
     </ul>
 
     <!-- oredered list -->
-    <ol>
+    <ol type="A">
       <li>Item 1</li>
       <li>Item 2</li>
       <li>Item 3</li>
