--- a/schedule.html
+++ b/schedule.html
@@ -15,9 +15,25 @@
     </ul>
 
     <!-- oredered list -->
-    <ol type="A">
+    <ol type="i">
       <li>Item 1</li>
       <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+    </ol>
+
+    <!-- nested list -->
+    <ol type="i">
+      <li>Item 1</li>
+      <li>
+        Item 2
+        <ul type="disc">
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+          <li>Item 4</li>
+        </ul>
+      </li>
       <li>Item 3</li>
       <li>Item 4</li>
     </ol>
