--- a/index.html
+++ b/index.html
@@ -107,15 +107,13 @@
       <!-- Begin LottieFile -->
       <div class="container lottiefiles">
         <div class="row">
+          <h2>Register for our free event</h2>
           <div class="col-6">
             <dotlottie-wc src="https://lottie.host/122a9b9e-d007-4d7a-ab67-dd0b1c4c9464/X0h12wUshv.lottie" style="width: 300px; height: 300px" autoplay loop></dotlottie-wc>
           </div>
 
           <div class="col-6">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor veniam repellendus tenetur ipsum aspernatur unde laudantium necessitatibus deserunt accusantium omnis aliquid voluptate voluptates, quia optio commodi fugiat officiis a, nam beatae dicta sint! Repellendus, perferendis quod. Sequi laboriosam harum voluptatibus pariatur beatae fuga doloremque totam nostrum eum, odio expedita illum facilis illo deserunt ipsa consequuntur, consectetur provident soluta obcaecati recusandae ducimus odit dolores sed! Voluptate, ea dolor, libero ipsum eligendi distinctio dolores optio doloribus, blanditiis quibusdam enim soluta labore facere eum. Neque nobis tempore, eius suscipit quibusdam perspiciatis. Repellendus velit in id suscipit dolorem recusandae odit quia architecto officia nesciunt asperiores porro optio ipsa accusamus rem quis dolorum, sunt, corporis voluptatibus veniam numquam quidem unde. Cupiditate, nisi nam non quam ea quibusdam, consequatur delectus praesentium
-              officia quasi asperiores pariatur obcaecati deserunt recusandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.
-            </p>
+            <p>Lorem ipsum dolor sandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.</p>
           </div>
         </div>
       </div>
