--- a/index.html
+++ b/index.html
@@ -105,15 +105,17 @@
       <!-- End First Paragraph -->
 
       <!-- Begin LottieFile -->
-      <div class="container lottiefiles">
-        <div class="row">
-          <h2>Register for our free event</h2>
-          <div class="col-6">
-            <dotlottie-wc src="https://lottie.host/ed869002-8152-4b31-9ff2-5df8531e8ef5/H4AG6Yhzi1.lottie" style="width: 300px; height: 300px" autoplay loop></dotlottie-wc>
-          </div>
+      <div class="container-fluid lottiefiles">
+        <div class="container">
+          <div class="row">
+            <h2>Register for our free event</h2>
+            <div class="col-6">
+              <dotlottie-wc src="https://lottie.host/ed869002-8152-4b31-9ff2-5df8531e8ef5/H4AG6Yhzi1.lottie" style="width: 300px; height: 300px" autoplay loop></dotlottie-wc>
+            </div>
 
-          <div class="col-6">
-            <p>Lorem ipsum dolor sandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.</p>
+            <div class="col-6">
+              <p>Lorem ipsum dolor sandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.</p>
+            </div>
           </div>
         </div>
       </div>
