--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Font Awesome CDN CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- CSS Animage CDN CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <!-- Local CSS -->
     <link rel="stylesheet" href="css/styles.css" />
 
@@ -90,7 +93,7 @@
       <!-- End Clip Path -->
 
       <!-- Begin First Paragraph -->
-      <div class="container paragraph-one">
+      <div class="container paragraph-one headline">
         <div class="row">
           <div class="col-12">
             <p>
@@ -165,6 +168,9 @@
 
       <!-- LottieFile CDN JS-->
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.5/dist/dotlottie-wc.js" type="module"></script>
+
+      <!-- ScrollReveal CDN JS-->
+      <script src="https://unpkg.com/scrollreveal"></script>
 
       <!-- Local JS File with Header -->
       <script src="components/js/header.js"></script>
