--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <!-- End LottieFile -->
 
       <!-- Begin Headshot -->
-      <div class="container text-center headshots">
+      <div class="container text-center headshots animate__animated animate__bounce">
         <div class="row">
           <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <img src="images/square/person-1.jpg" class="cropped" alt="Person 1" />
