--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.5/dist/dotlottie-wc.js" type="module"></script>
 
       <!-- ScrollReveal CDN JS-->
-      <script src="https://unpkg.com/scrollreveal"></script>
+      <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
       <!-- Local JS File with Header -->
       <script src="components/js/header.js"></script>
