--- a/index.html
+++ b/index.html
@@ -29,78 +29,28 @@
     <!-- end header -->
 
     <main>
-      <h1 class="animate__animated animate__bounce">An animated element</h1>
       <!-- begin carousel -->
       <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-
         <div class="carousel-inner">
-          <div class="carousel-item">
+          <div class="carousel-item active">
             <img src="images/carousel/carousel-1.jpg" class="d-block w-100" alt="Person reading a book" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Share the Joy of Reading</h5>
+              <p>Exchange your favorite stories and meet book lovers from your own neighborhood.</p>
             </div>
           </div>
-
-          <!-- video goes here -->
-          <div class="carousel-item active">
-            <div class="ratio ratio-16x9">
-              <video autoplay loop muted id="my-vid">
-                <source src="https://videos.pexels.com/video-files/855418/855418-hd_1920_1080_25fps.mp4" type="video/mp4" />
-              </video>
-            </div>
-          </div>
-
-          <div class="carousel-item">
-            <img src="images/carousel/carousel-2.jpg" class="d-block w-100" alt="Book shelf" />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      <!-- end carouosel -->
-
-      <!-- Begin Font Awesome Row -->
-      <div class="container-fluid text-center blinn-fa-container">
-        <div class="row">
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-book blinn-fa-icon"></i><br /><a href="#">Books</a></div>
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-person-shelter blinn-fa-icon"></i><br /><a href="#">Library</a></div>
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-bookmark blinn-fa-icon"></i><br /><a href="#">Bookmarks</a></div>
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-pencil blinn-fa-icon"></i><br /><a href="#">Write a Book</a></div>
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-users blinn-fa-icon"></i><br /><a href="#">Community</a></div>
-          <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-handshake blinn-fa-icon"></i><br /><a href="#">Get Help</a></div>
+          <!-- additional carousel slides... -->
         </div>
       </div>
-      <!-- End Font Awesome Row -->
-
-      <!-- Begin Clip Path -->
-      <div id="custom-clip-path"></div>
-      <!-- End Clip Path -->
+      <!-- end carousel -->
 
       <!-- Begin First Paragraph -->
       <div class="container paragraph-one headline">
         <div class="row">
           <div class="col-12">
             <p>
-              <img src="images/square/paragraph-one.jpg" class="paragraph-one-img" alt="Member of the modeling agancy" />
-
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor veniam repellendus tenetur ipsum aspernatur unde laudantium necessitatibus deserunt accusantium omnis aliquid voluptate voluptates, quia optio commodi fugiat officiis a, nam beatae dicta sint! Repellendus, perferendis quod. Sequi laboriosam harum voluptatibus pariatur beatae fuga doloremque totam nostrum eum, odio expedita illum facilis illo deserunt ipsa consequuntur, consectetur provident soluta obcaecati recusandae ducimus odit dolores sed! Voluptate, ea dolor, libero ipsum eligendi distinctio dolores optio doloribus, blanditiis quibusdam enim soluta labore facere eum. Neque nobis tempore, eius suscipit quibusdam perspiciatis. Repellendus velit in id suscipit dolorem recusandae odit quia architecto officia nesciunt asperiores porro optio ipsa accusamus rem quis dolorum, sunt, corporis voluptatibus veniam numquam quidem unde. Cupiditate, nisi nam non quam ea quibusdam, consequatur delectus praesentium
-              officia quasi asperiores pariatur obcaecati deserunt recusandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.
+              <img src="images/square/paragraph-one.jpg" class="paragraph-one-img" alt="Community book shelf" />
+              Our Free Little Library brings people together through the love of reading. Everyone is welcome to take a book or leave one to share a story with someone new.
             </p>
           </div>
         </div>
@@ -111,13 +61,12 @@
       <div class="container-fluid lottiefiles">
         <div class="container">
           <div class="row">
-            <h2>Register for our free event</h2>
+            <h2>Register for “Books Under the Stars”</h2>
             <div class="col-6">
-              <dotlottie-wc src="https://lottie.host/ed869002-8152-4b31-9ff2-5df8531e8ef5/H4AG6Yhzi1.lottie" style="width: 300px; height: 300px" autoplay loop></dotlottie-wc>
+              <dotlottie-wc src="..." autoplay loop></dotlottie-wc>
             </div>
-
             <div class="col-6">
-              <p>Lorem ipsum dolor sandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.</p>
+              <p>Join us for an evening of storytelling and community fun at our annual outdoor book fair.</p>
             </div>
           </div>
         </div>
@@ -127,30 +76,14 @@
       <!-- Begin Headshot -->
       <div class="container text-center headshots animate__backInDown">
         <div class="row">
-          <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            <img src="images/square/person-1.jpg" class="cropped" alt="Person 1" />
-            <br />
+          <div class="col">
+            <img src="images/square/person-1.jpg" class="cropped" alt="Sarah, volunteer" />
             <blockquote>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
-              <cite>Lorem ipsum dolor sit amet.</cite>
+              “This little library turned our street into a community of readers.”
+              <cite>— Sarah, Volunteer</cite>
             </blockquote>
           </div>
-          <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            <img src="images/square/person-2.jpg" class="cropped" alt="Person 1" />
-            <br />
-            <blockquote>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
-              <cite>Lorem ipsum dolor sit amet.</cite>
-            </blockquote>
-          </div>
-          <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            <img src="images/square/person-3.jpg" class="cropped" alt="Person 1" />
-            <br />
-            <blockquote>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
-              <cite>Lorem ipsum dolor sit amet.</cite>
-            </blockquote>
-          </div>
+          <!-- additional testimonials... -->
         </div>
       </div>
       <!-- End Headshot -->
