--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/carousel/carousel-1.jpg" class="d-block w-100" alt="Person reading a book" />
+            <img src="images/carousel/carousel-1.jpg" class="d-block w-100" alt="Neighbors sharing books" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Share the Joy of Reading</h5>
-              <p>Exchange your favorite stories and meet book lovers from your own neighborhood.</p>
+              <h5>Building Community, One Book at a Time</h5>
+              <p>Take a story, leave a story — our neighborhood library brings people together through reading.</p>
             </div>
           </div>
-          <!-- additional carousel slides... -->
         </div>
       </div>
       <!-- end carousel -->
@@ -49,8 +48,8 @@
         <div class="row">
           <div class="col-12">
             <p>
-              <img src="images/square/paragraph-one.jpg" class="paragraph-one-img" alt="Community book shelf" />
-              Our Free Little Library brings people together through the love of reading. Everyone is welcome to take a book or leave one to share a story with someone new.
+              <img src="images/square/paragraph-one.jpg" class="paragraph-one-img" alt="Community book exchange" />
+              Our Free Little Library is a place where everyone can share books, ideas, and connections. It’s a simple way to spark curiosity and kindness throughout our community.
             </p>
           </div>
         </div>
@@ -61,12 +60,12 @@
       <div class="container-fluid lottiefiles">
         <div class="container">
           <div class="row">
-            <h2>Register for “Books Under the Stars”</h2>
+            <h2>Register for “Stories in the Park”</h2>
             <div class="col-6">
               <dotlottie-wc src="..." autoplay loop></dotlottie-wc>
             </div>
             <div class="col-6">
-              <p>Join us for an evening of storytelling and community fun at our annual outdoor book fair.</p>
+              <p>Join us for a community event celebrating storytelling, creativity, and reading under the open sky.</p>
             </div>
           </div>
         </div>
@@ -77,13 +76,19 @@
       <div class="container text-center headshots animate__backInDown">
         <div class="row">
           <div class="col">
-            <img src="images/square/person-1.jpg" class="cropped" alt="Sarah, volunteer" />
+            <img src="images/square/person-1.jpg" class="cropped" alt="Alex, volunteer" />
             <blockquote>
-              “This little library turned our street into a community of readers.”
-              <cite>— Sarah, Volunteer</cite>
+              “This project made our neighborhood feel like family again.”
+              <cite>— Alex, Volunteer</cite>
             </blockquote>
           </div>
-          <!-- additional testimonials... -->
+          <div class="col">
+            <img src="images/square/person-2.jpg" class="cropped" alt="Mia, reader" />
+            <blockquote>
+              “I’ve discovered books and friends I never expected — it’s pure joy.”
+              <cite>— Mia, Community Member</cite>
+            </blockquote>
+          </div>
         </div>
       </div>
       <!-- End Headshot -->
