--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <!-- end header -->
 
     <main>
-      <h1 class="animate__animated animate__bounce">An animated element</h1>
       <!-- begin carousel -->
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
@@ -88,12 +87,12 @@
       </div>
       <!-- End Font Awesome Row -->
 
-      <!-- Begin Clip Path -->
-      <div id="custom-clip-path"></div>
+      <!-- Begin Clip Path 
+      <div id="custom-clip-path"></div>-->
       <!-- End Clip Path -->
 
       <!-- Begin First Paragraph -->
-      <div class="container paragraph-one headline">
+      <div class="container paragraph-one headline animate__animated animate__bounce">
         <div class="row">
           <div class="col-12">
             <p>
