--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       <!-- End Clip Path -->
 
       <!-- Begin First Paragraph -->
-      <!-- <div class="container paragraph-one headline animate__animated animate__backInLeft"> -->
-      <div class="container paragraph-one headline animate-on-scroll">
+      <div class="container paragraph-one headline animate__animated animate__backInLeft">
+        <!-- <div class="container paragraph-one headline animate-on-scroll">-->
         <div class="row">
           <div class="col-12">
             <p>
