--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="container">
           <div class="row">
             <h2>Register for our free event</h2>
-            <div class="col-6">
+            <div class="col-6 animate-on-scroll">
               <dotlottie-wc src="https://lottie.host/ed869002-8152-4b31-9ff2-5df8531e8ef5/H4AG6Yhzi1.lottie" style="width: 300px; height: 300px" autoplay loop></dotlottie-wc>
             </div>
 
