--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <dotlottie-wc src="https://lottie.host/ed869002-8152-4b31-9ff2-5df8531e8ef5/H4AG6Yhzi1.lottie" style="width: 300px; height: 300px" autoplay loop></dotlottie-wc>
             </div>
 
-            <div class="col-6">
+            <div class="col-6 animate-on-scroll" data-animate="animate__backInLeft">
               <p>Lorem ipsum dolor sandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.</p>
             </div>
           </div>
