--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       <!-- Begin First Paragraph -->
       <!-- <div class="container paragraph-one headline animate__animated animate__backInLeft"> -->
-      <div class="container paragraph-one headline animate-on-scroll" data-animate="animate__backInRight">
+      <div class="container paragraph-one headline animate-on-scroll" data-animate="animate__backInRight" data-delay="0.5s">
         <div class="row">
           <div class="col-12">
             <p>
