--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
       <!-- Begin First Paragraph -->
       <!-- <div class="container paragraph-one headline animate__animated animate__backInLeft"> -->
-      <div class="container paragraph-one headline animate-on-scroll" data-animate="animate__backInRight" data-delay="0.5s">
+      <div class="container paragraph-one headline">
         <div class="row">
           <div class="col-12">
             <p>
-              <img src="images/square/paragraph-one.jpg" class="paragraph-one-img" alt="Member of the modeling agancy" />
+              <img src="images/square/paragraph-one.jpg" class="paragraph-one-img animate-on-scroll" alt="Member of the modeling agancy" data-animate="animate__backInRight" data-delay="0.5s" />
 
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor veniam repellendus tenetur ipsum aspernatur unde laudantium necessitatibus deserunt accusantium omnis aliquid voluptate voluptates, quia optio commodi fugiat officiis a, nam beatae dicta sint! Repellendus, perferendis quod. Sequi laboriosam harum voluptatibus pariatur beatae fuga doloremque totam nostrum eum, odio expedita illum facilis illo deserunt ipsa consequuntur, consectetur provident soluta obcaecati recusandae ducimus odit dolores sed! Voluptate, ea dolor, libero ipsum eligendi distinctio dolores optio doloribus, blanditiis quibusdam enim soluta labore facere eum. Neque nobis tempore, eius suscipit quibusdam perspiciatis. Repellendus velit in id suscipit dolorem recusandae odit quia architecto officia nesciunt asperiores porro optio ipsa accusamus rem quis dolorum, sunt, corporis voluptatibus veniam numquam quidem unde. Cupiditate, nisi nam non quam ea quibusdam, consequatur delectus praesentium
               officia quasi asperiores pariatur obcaecati deserunt recusandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.
