--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div class="container text-center headshots animate__backInDown">
         <div class="row">
           <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            <img src="images/square/person-1.jpg" class="cropped animate-on-scroll" alt="Person 1" data-animate="animate__fadeInUp" />
+            <img src="images/square/person-1.jpg" class="cropped animate-on-scroll animate__delay-2s" alt="Person 1" data-animate="animate__fadeInUp" />
             <br />
             <blockquote>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
@@ -136,7 +136,7 @@
             </blockquote>
           </div>
           <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            <img src="images/square/person-2.jpg" class="cropped animate-on-scroll" alt="Person 1" data-animate="animate__fadeInUp" />
+            <img src="images/square/person-2.jpg" class="cropped animate-on-scroll animate__delay-3s" alt="Person 1" data-animate="animate__fadeInUp" />
             <br />
             <blockquote>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
@@ -144,7 +144,7 @@
             </blockquote>
           </div>
           <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            <img src="images/square/person-3.jpg" class="cropped animate-on-scroll" alt="Person 1" data-animate="animate__fadeInUp" />
+            <img src="images/square/person-3.jpg" class="cropped animate-on-scroll animate__delay-4s" alt="Person 1" data-animate="animate__fadeInUp" />
             <br />
             <blockquote>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
