--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
       h1 {
         display: block;
       }
+
+      .delay-250ms {
+        animation-delay: 250ms;
+      }
+
+      .delay-500ms {
+        animation-delay: 750ms;
+      }
+
+      .delay-750ms {
+        animation-delay: 750ms;
+      }
     </style>
   </head>
   <body>
@@ -128,7 +140,7 @@
       <div class="container text-center headshots animate__backInDown">
         <div class="row">
           <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            <img src="images/square/person-1.jpg" class="cropped animate-on-scroll animate__delay-500ms" alt="Person 1" data-animate="animate__fadeInUp" />
+            <img src="images/square/person-1.jpg" class="cropped animate-on-scroll delay-250ms" alt="Person 1" data-animate="animate__fadeInUp" />
             <br />
             <blockquote>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
@@ -136,7 +148,7 @@
             </blockquote>
           </div>
           <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            <img src="images/square/person-2.jpg" class="cropped animate-on-scroll animate__delay-1000ms" alt="Person 1" data-animate="animate__fadeInUp" />
+            <img src="images/square/person-2.jpg" class="cropped animate-on-scroll delay-500ms" alt="Person 1" data-animate="animate__fadeInUp" />
             <br />
             <blockquote>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
@@ -144,7 +156,7 @@
             </blockquote>
           </div>
           <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            <img src="images/square/person-3.jpg" class="cropped animate-on-scroll animate__delay-1500ms" alt="Person 1" data-animate="animate__fadeInUp" />
+            <img src="images/square/person-3.jpg" class="cropped animate-on-scroll delay-750ms" alt="Person 1" data-animate="animate__fadeInUp" />
             <br />
             <blockquote>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
