--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
             <p>
               <img src="images/square/paragraph-one.jpg" class="paragraph-one-img animate-on-scroll" alt="Member of the modeling agancy" data-animate="animate__backInRight" data-delay="0.5s" />
 
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor veniam repellendus tenetur ipsum aspernatur unde laudantium necessitatibus deserunt accusantium omnis aliquid voluptate voluptates, quia optio commodi fugiat officiis a, nam beatae dicta sint! Repellendus, perferendis quod. Sequi laboriosam harum voluptatibus pariatur beatae fuga doloremque totam nostrum eum, odio expedita illum facilis illo deserunt ipsa consequuntur, consectetur provident soluta obcaecati recusandae ducimus odit dolores sed! Voluptate, ea dolor, libero ipsum eligendi distinctio dolores optio doloribus, blanditiis quibusdam enim soluta labore facere eum. Neque nobis tempore, eius suscipit quibusdam perspiciatis. Repellendus velit in id suscipit dolorem recusandae odit quia architecto officia nesciunt asperiores porro optio ipsa accusamus rem quis dolorum, sunt, corporis voluptatibus veniam numquam quidem unde. Cupiditate, nisi nam non quam ea quibusdam, consequatur delectus praesentium
-              officia quasi asperiores pariatur obcaecati deserunt recusandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.
+              A Little Free Library brings neighbors together, encourages lifelong reading, and makes books accessible to everyone. By offering a simple “take a book, leave a book” exchange, it creates a welcoming space where community members can share stories, discover new authors, and spark curiosity. Whether it’s inspiring young readers or providing a moment of escape for adults, a Little Free Library helps spread kindness, connection, and a love of learning—one book at a time.
             </p>
           </div>
         </div>
@@ -143,25 +142,19 @@
             <img src="images/square/person-1.jpg" class="cropped animate-on-scroll delay-250ms" alt="Person 1" data-animate="animate__fadeInUp" />
             <br />
             <blockquote>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
-              <cite>Lorem ipsum dolor sit amet.</cite>
+              Every time I pass our Little Free Library, it feels like the whole neighborhood is sharing a smile through the stories we leave behind.”
+              <cite>Sofia Bennett.</cite>
             </blockquote>
           </div>
           <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <img src="images/square/person-2.jpg" class="cropped animate-on-scroll delay-500ms" alt="Person 1" data-animate="animate__fadeInUp" />
             <br />
-            <blockquote>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
-              <cite>Lorem ipsum dolor sit amet.</cite>
-            </blockquote>
+            <blockquote>I love how a simple wooden box turned into a place where strangers connect over books they’ve loved. <cite>Marcus Hill.</cite></blockquote>
           </div>
           <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <img src="images/square/person-3.jpg" class="cropped animate-on-scroll delay-750ms" alt="Person 1" data-animate="animate__fadeInUp" />
             <br />
-            <blockquote>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, odit. Et sit incidunt maiores porro.
-              <cite>Lorem ipsum dolor sit amet.</cite>
-            </blockquote>
+            <blockquote>Watching kids discover new stories here reminds me why small acts of sharing can make a big difference. <cite>Elena Cruz.</cite></blockquote>
           </div>
         </div>
       </div>
