--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
             <p>
               <img src="images/square/paragraph-one.jpg" class="paragraph-one-img animate-on-scroll" alt="Member of the modeling agancy" data-animate="animate__backInRight" data-delay="0.5s" />
 
-              A Little Free Library brings neighbors together, encourages lifelong reading, and makes books accessible to everyone. By offering a simple “take a book, leave a book” exchange, it creates a welcoming space where community members can share stories, discover new authors, and spark curiosity. Whether it’s inspiring young readers or providing a moment of escape for adults, a Little Free Library helps spread kindness, connection, and a love of learning—one book at a time.
+              A Little Free Library is a small, community-based book exchange where anyone can take a book or leave one for others to enjoy. These tiny libraries come in all shapes and sizes—sometimes handcrafted, sometimes repurposed from old cabinets—but they all share the same purpose: spreading the love of reading. Whether placed in a neighborhood, outside a school, or near a park bench, each library becomes a welcoming invitation to slow down, explore a new story, and connect with others through the simple joy of books. Getting involved is easy and incredibly rewarding. You don’t have to be a builder or a librarian—just someone who believes in sharing. When you donate books, you’re giving your neighbors the chance to discover a favorite author, learn something new, or escape into an adventure. And when you pick up a book yourself, you become part of a larger cycle of generosity that keeps the library thriving. For many people, the real joy comes from watching the community
+              interact with the library. Children stop by on their way home from school, families browse together on evening walks, and adults find unexpected favorites they may never have chosen on their own. These simple moments create a sense of connection that strengthens the neighborhood and encourages a culture of learning and curiosity. Becoming a steward—or even just a regular visitor—means joining a movement built on kindness and shared passion. Every book placed inside carries the potential to inspire, comfort, or spark imagination. And every person who participates helps keep the magic going. It’s a small effort with a big impact, proving that something as simple as a free box of books can bring a community together in meaningful and joyful ways.
             </p>
           </div>
         </div>
@@ -128,7 +129,9 @@
             </div>
 
             <div class="col-6 animate-on-scroll" data-animate="animate__backInLeft">
-              <p>Lorem ipsum dolor sandae placeat eveniet molestiae, laboriosam numquam culpa! Vero necessitatibus obcaecati veritatis magnam iure amet. Numquam obcaecati cumque provident reiciendis illo optio deserunt molestiae sapiente? Mollitia vel debitis voluptas nostrum quasi nihil id qui sapiente ex ipsum? Autem pariatur quas placeat doloribus numquam odio neque laborum voluptas omnis, libero maiores saepe, nesciunt necessitatibus reiciendis qui. Officia quidem facere illo ab accusantium dolorum pariatur voluptates corporis alias. Molestias, minus fugit.</p>
+              <p>A Little Free Library brings neighbors together, encourages lifelong reading, and makes books accessible to everyone. By offering a simple “take a book, leave a book” exchange, it creates a welcoming space where community members can share stories, discover new authors, and spark curiosity. Whether it’s inspiring young readers or providing a moment of escape for adults, a Little Free Library helps spread kindness, connection, and a love of learning—one book at a time.</p>
+
+              <a class="btn btn-secondary" href="form.html">Register</a>
             </div>
           </div>
         </div>
