--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <div class="carousel-item">
             <img src="images/carousel/carousel-1.jpg" class="d-block w-100" alt="Person reading a book" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Submit your work</h5>
+              <p>We invite local authors to share their work with the community.</p>
             </div>
           </div>
 
@@ -70,8 +70,8 @@
           <div class="carousel-item">
             <img src="images/carousel/carousel-2.jpg" class="d-block w-100" alt="Book shelf" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Get Involved</h5>
+              <p>Help your community through this wonderful activity calle dreading.</p>
             </div>
           </div>
         </div>
