--- a/schedule.html
+++ b/schedule.html
@@ -34,18 +34,21 @@
 
             <!-- nested list -->
             <ol type="i">
-              <li>Item 1</li>
+              <li>What Is a Little Free Library?</li>
+
               <li>
-                Item 2
+                How to Get Involved
                 <ul type="disc">
-                  <li>Item 1</li>
-                  <li>Item 2</li>
-                  <li>Item 3</li>
-                  <li>Item 4</li>
+                  <li>Donate gently used books to your local library box</li>
+                  <li>Build or purchase your own Little Free Library structure</li>
+                  <li>Become a steward and help maintain a neighborhood library</li>
+                  <li>Host a community book drive to keep shelves full</li>
                 </ul>
               </li>
-              <li>Item 3</li>
-              <li>Item 4</li>
+
+              <li>Benefits of Sharing Books in Your Community</li>
+
+              <li>Tips for Keeping Your Little Free Library Safe and Welcoming</li>
             </ol>
           </div>
 
@@ -65,69 +68,58 @@
 
             <tbody>
               <tr>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
+                <td>8:00 AM</td>
+                <td>Check for new book donations</td>
+                <td>Light shelf tidy-up</td>
+                <td>Restock kids’ section</td>
+                <td>Check for weather damage</td>
+                <td>Organize chapter books</td>
+                <td>Family visit hour</td>
+                <td>Quiet morning browsing</td>
               </tr>
 
               <tr>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
+                <td>10:00 AM</td>
+                <td>Wipe down library box</td>
+                <td>Post weekly update online</td>
+                <td>Add themed book bundle</td>
+                <td>Rotate popular titles</td>
+                <td>Add weekend reading picks</td>
+                <td>Storytime at the library</td>
+                <td>Neighbors swap books</td>
               </tr>
 
               <tr>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
+                <td>12:00 PM</td>
+                <td>Neighborhood walk-by check</td>
+                <td>Respond to community messages</td>
+                <td>Label newly donated books</td>
+                <td>Repaint touch-ups (as needed)</td>
+                <td>Midday tidy</td>
+                <td>Craft a bookmark station</td>
+                <td>Relaxed community meetup</td>
               </tr>
 
               <tr>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
+                <td>3:00 PM</td>
+                <td>Kids stop by after school</td>
+                <td>Add educational books</td>
+                <td>Track most-borrowed genres</td>
+                <td>Refresh book categories</td>
+                <td>Prepare for weekend visitors</td>
+                <td>Volunteer book sorting</td>
+                <td>Afternoon reading break</td>
               </tr>
 
               <tr>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-              </tr>
-
-              <tr>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
+                <td>5:00 PM</td>
+                <td>General cleanup</td>
+                <td>Replace worn-out books</td>
+                <td>Evening community check-in</td>
+                <td>Finalize weekend activities</td>
+                <td>Final bookshelf check</td>
+                <td>Library closing prep</td>
+                <td>Steward’s end-of-day review</td>
               </tr>
             </tbody>
           </table>
@@ -146,10 +138,10 @@
 
             <!-- oredered list -->
             <ol type="i">
-              <li>Item 1</li>
-              <li>Item 2</li>
-              <li>Item 3</li>
-              <li>Item 4</li>
+              <li>Bring a gently used book to share with the community.</li>
+              <li>Browse the library to discover a new story for the week.</li>
+              <li>Record your favorite find in our Community Reading Log.</li>
+              <li>Stop by again later in the week to check for new arrivals.</li>
             </ol>
           </div>
         </div>
