--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             <div class="col-6 animate-on-scroll" data-animate="animate__backInLeft">
               <p>A Little Free Library brings neighbors together, encourages lifelong reading, and makes books accessible to everyone. By offering a simple “take a book, leave a book” exchange, it creates a welcoming space where community members can share stories, discover new authors, and spark curiosity. Whether it’s inspiring young readers or providing a moment of escape for adults, a Little Free Library helps spread kindness, connection, and a love of learning—one book at a time.</p>
 
-              <a class="btn btn-secondary" href="form.html">Volunteer</a>
-              <a class="btn btn-secondary" href="schedule.html">Participate</a>
+              <a class="btn btn-primary" href="form.html">Volunteer</a>
+              <a class="btn btn-primary" href="schedule.html">Participate</a>
             </div>
           </div>
         </div>
