--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Raul's Modeling Page</title>
+    <title>Raul's Little Free Library Page</title>
 
     <!-- Bootstrap CDN CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
@@ -30,8 +30,7 @@
         <div class="wrapper-main">
           <div class="wrapper-content">
             <h2>Schedule</h2>
-            <p>Lorem ipsum dolor, sit amet conse nesciunt similique quam non soluta. Totam doloremque libero esse laborum, necessitatibus provident dicta iure debitis. Ratione dolores assumenda aperiam, tenetur ad consequatur expedita harum voluptas earum vero labore ipsam, neque debitis est doloribus eligendi omnis quis quidem recusandae pariatur! Neque ex fugiat perspiciatis! Aliquid pariatur itaque et dolores est obcaecati earum! Incidunt expedita perferendis laborum non dignissimos voluptas culpa fugiat facere eius?</p>
-
+            <p>Our weekly schedule is designed to help community members of all ages stay connected to the joy of reading. Whether you stop by during a Story Swap session, join a family-friendly Book Walk, or volunteer during our weekend refresh hours, each activity supports the shared mission of keeping our Little Free Library vibrant and well-stocked. These moments not only strengthen neighborhood bonds but also encourage everyone to participate in a cycle of giving, sharing, and discovery.</p>
             <!-- nested list -->
             <ol type="i">
               <li>What Is a Little Free Library?</li>
@@ -125,16 +124,9 @@
           </table>
 
           <div class="wrapper-content">
-            <h2>Other Heading</h2>
-            <p>Lorem ipsum dolor, siidem ullam culpa nulla optio eos? Dolorem nesciunt similique quam non soluta. Totam doloremque libero esse laborum, necessitatibus provident dicta iure debitis. Ratione dolores assumenda aperiam, tenetur ad consequatur expedita harum voluptas earum vero labore ipsam, neque debitis est doloribus eligendi omnis quis quidem recusandae pariatur! Neque ex fugiat perspiciatis! Aliquid pariatur itaque et dolores est obcaecati earum! Incidunt expedita perferendis laborum non dignissimos voluptas culpa fugiat facere eius?</p>
-
+            <h2>We are excited!!!</h2>
+            <p>If you’re new to our schedule, feel free to explore a program that catches your interest—there’s always something happening, and all activities are open to readers of every level. You’re invited to bring a book, take a book, or simply enjoy the atmosphere of a community built around generosity and imagination. No registration is ever required; just come as you are and join the fun. Your involvement helps ensure our Little Free Library remains a welcoming space for all.</p>
             <!-- unordered list -->
-            <ul type="disc">
-              <li>Item 1</li>
-              <li>Item 2</li>
-              <li>Item 3</li>
-              <li>Item 4</li>
-            </ul>
 
             <!-- oredered list -->
             <ol type="i">
