--- a/form.html
+++ b/form.html
@@ -33,19 +33,19 @@
             <!-- first name -->
             <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
               <label for="first-name">First Name</label>
-              <input type="text" id="first-name" name="firstName" class="form-control" />
+              <input type="text" id="first-name" name="firstName" class="form-control" required />
             </div>
 
             <!-- last name -->
             <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
               <label for="last-name">Last Name</label>
-              <input type="text" id="last-name" name="lastName" class="form-control" />
+              <input type="text" id="last-name" name="lastName" class="form-control" required />
             </div>
 
             <!-- Email - email -->
             <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
               <label for="email">Email</label>
-              <input type="email" name="email" id="email" class="form-control" />
+              <input type="email" name="email" id="email" class="form-control" required />
             </div>
 
             <!-- Comments -->
