--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
             <p>If you are a business, let me know and I'll mention it on this page...</p>
             <p>If you are a local author, let me know if I can help by promoting your work here.</p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
         </div>
       </div>
